[gd_scene load_steps=4 format=3 uid="uid://b56515n0oi2ut"]

[ext_resource type="PackedScene" uid="uid://bpkffg1rqjdpp" path="res://scenes/user_interface/CustomButton.tscn" id="1_pyjuj"]
[ext_resource type="Script" path="res://scripts/user_interface/uiOthersMenu.gd" id="1_uixws"]
[ext_resource type="Theme" uid="uid://cuu2oxc3xqlvt" path="res://design/SideButtonHighlights.tres" id="2_ddmkh"]

[node name="OTHERS" type="MarginContainer"]
theme_override_constants/margin_left = 200
theme_override_constants/margin_top = 40
theme_override_constants/margin_right = 200
script = ExtResource("1_uixws")

[node name="VBoxContainer" type="VBoxContainer" parent="."]
layout_mode = 2

[node name="Label" type="Label" parent="VBoxContainer"]
layout_mode = 2
text = "SAVE 1"
horizontal_alignment = 1

[node name="Settings" parent="VBoxContainer" instance=ExtResource("1_pyjuj")]
layout_mode = 2
theme = ExtResource("2_ddmkh")
text = "SETTINGS"
alignment = 1

[node name="HBoxContainer" type="HBoxContainer" parent="VBoxContainer"]
layout_mode = 2
alignment = 1

[node name="ReturnMenu" parent="VBoxContainer/HBoxContainer" instance=ExtResource("1_pyjuj")]
layout_mode = 2
size_flags_horizontal = 3
theme = ExtResource("2_ddmkh")
text = "RETURN MENU"
alignment = 1

[node name="ExitGame" parent="VBoxContainer/HBoxContainer" instance=ExtResource("1_pyjuj")]
layout_mode = 2
size_flags_horizontal = 3
theme = ExtResource("2_ddmkh")
text = "EXIT GAME"
alignment = 1

[connection signal="pressed" from="VBoxContainer/Settings" to="." method="_on_settings_pressed"]
[connection signal="pressed" from="VBoxContainer/HBoxContainer/ReturnMenu" to="." method="_on_return_menu_pressed"]
[connection signal="pressed" from="VBoxContainer/HBoxContainer/ExitGame" to="." method="_on_exit_game_pressed"]
